css/default.css
/*
 * This file is part of example.programming.web.coniestica = Coniestica.
 *
 * Coniestica is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Coniestica is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Coniestica.  If not, see <https://www.gnu.org/licenses/>.
 */

/*
 * Copyright (c) 2019 Tobias Briones
 */

:root {
    --nav-height: 96px;
    --brown-primary: #EDA977;
    --blue-accent: #546E7A;
    --footer-bg: #09172f;
}

.gone {
    display: none;
}

* {
    position: relative;
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
    color: rgba(0, 0, 0, 0.89);
}

html,
body {
    width: 100%;
}

a {
    text-decoration: none;
}

button {
    padding: 12px 24px;
    margin: 4px 8px;
    border-radius: 8px;
    border: none;
    background-color: var(--blue-accent);
    color: #efefef;
    font-weight: bold;
    outline: none;
    cursor: pointer;
}

input {
    padding: 8px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: none;
    border: none;
    background-color: transparent;
    border-bottom: 2px solid var(--brown-primary);
}

